Check the root pointer events as well for capture

Touch pointer events events are being routed to
the target directly without passing all the
iframes' EventHandlers. As a result the inner
EventHandler has no clue whether a given pointerId
is active or capturable if that is a touch pointer
event.
This CL adds the check to every iframe to also
checks the root frame for the pointer event and
it allows the capture if that pointer event was
sent to a node inside the requested iframe.

BUG=653860

Review-Url: https://chromiumcodereview.appspot.com/2408133007
Cr-Commit-Position: refs/heads/master@{#426205}

Former-commit-id: 85c41444f11d3c24ea24d3c776d96dbe913cad03